--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
             </div>
 
           </div>
-          <div class="col-lg-7 col-12 mt-5 -primary ">
-            <div class="row mt-5">
+          <div class="col-lg-7 col-12 mt-md-5 mt-0 -primary ">
+            <div class="row mt-md-5 mt-4">
               <div class="col-md-11 col-10 ">
 
                 <div id="carouselExampleDark " class="carousel carousel-dark slide" data-bs-ride="carousel">
